[metadata]
name = durand
description = CANopen library providing functionality to implement nodes
long_description = file: README.rst
author = Günther Jena
author_email = guenther@jena.at
url = https://github.com/semiversus/python-durand
license = MIT License

[bdist_wheel]
universal = 1

[coverage:run]
branch = True
omit = src/durand/adapters/*

[coverage:report]
precision = 1
exclude_lines =
	if TYPE_CHECKING:

[tool:pytest]
testpaths = tests README.rst
doctest_optionflags = ELLIPSIS
addopts = --cov-report=html --no-cov-on-fail -q --cov=durand --doctest-modules

[pylama]
async = 1
format = pycodestyle
paths = src/durand
skip = src/durand/_version.py
linters = pycodestyle,mccabe,pylint